force-app/main/default/objects/Concession__c/fields/RM_Approved__c.field-meta.xml
<CustomField>
    <fullName>RM_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag concessions that have been approved by the Pricing Team with Edits, and now needs to be approved by the RM</description>
    <inlineHelpText>Flag concessions that have been approved by the Pricing Team with Edits, and now needs to be approved by the RM</inlineHelpText>
    <label>RM Approved</label>
    <type>Checkbox</type>
</CustomField>