force-app/main/default/objects/Concession__c/fields/SMT_Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>SMT_Deal_Number__c</fullName>
    <description>Existing unique reference number received from Scenario Management Tool</description>
    <externalId>true</externalId>
    <inlineHelpText>Existing unique reference number received from Scenario Management Tool</inlineHelpText>
    <label>SMT Deal Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>