force-app/main/default/objects/Concession__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Concession activation date</description>
    <inlineHelpText>Concession activation date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>