force-app/main/default/objects/Concession__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <description>Status of the Concession request in the lifecycle</description>
    <inlineHelpText>Status of the Concession request in the lifecycle</inlineHelpText>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>CCM Approved</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Letter Generated</fullName>
            </value>
            <value>
                <fullName>Pending Approval by CCM</fullName>
            </value>
            <value>
                <fullName>Pricing Team Approved</fullName>
            </value>
            <value>
                <fullName>With RM</fullName>
            </value>
            <value>
                <fullName>Pricing Team Rejected</fullName>
            </value>
            <value>
                <fullName>CCM Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>