force-app/main/default/objects/Concession__c/fields/Submit_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-1630 CommB - CMS - 8 - RM Submits Request for Approval</description>
    <label>Submit for Approval</label>
    <type>Checkbox</type>
</CustomField>