force-app/main/default/objects/Concession__c/fields/Submitter_email__c.field-meta.xml
<CustomField>
    <fullName>Submitter_email__c</fullName>
    <description>US:US-1630: CommB - CMS - 8 - RM Submits Request for Approval.
Email field to capture email ID of Approval process submitter</description>
    <label>Submitter email</label>
    <type>Email</type>
</CustomField>