force-app/main/default/objects/Concession__c/fields/Submitter_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitter_s_Name__c</fullName>
    <description>US-1630 CommB - CMS - 8 - RM Submits Request for Approval</description>
    <label>Submitter&apos;s Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>