force-app/main/default/objects/Concession__c/fields/Table_Number__c.field-meta.xml
<CustomField>
    <fullName>Table_Number__c</fullName>
    <description>The tariff table linked to the fee</description>
    <inlineHelpText>The tariff table linked to the fee</inlineHelpText>
    <label>Table Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>