force-app/main/default/objects/Concession__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Length of the concession agreement in months</description>
    <inlineHelpText>Length of the concession agreement in months</inlineHelpText>
    <label>Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>