force-app/main/default/objects/Concession__c/fields/Tot_Value_Added_Trans_Weighted_Avg_Price__c.field-meta.xml
<CustomField>
    <fullName>Tot_Value_Added_Trans_Weighted_Avg_Price__c</fullName>
    <description>The average price paid on value added transactions</description>
    <inlineHelpText>The average price paid on value added transactions</inlineHelpText>
    <label>Tot Value Added Trans Weighted Avg Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>