force-app/main/default/objects/Concession__c/fields/Total_Autosafe_Cash_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Total_Autosafe_Cash_Turnover__c</fullName>
    <description>The total cash values deposited into Autosafe channel</description>
    <inlineHelpText>The total cash values deposited into Autosafe channel</inlineHelpText>
    <label>Total Autosafe Cash Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>