force-app/main/default/objects/Concession__c/fields/Total_Autosafe_Cash_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Autosafe_Cash_Volume__c</fullName>
    <description>The number of cash deposits into Autosafe channel</description>
    <inlineHelpText>The number of cash deposits into Autosafe channel</inlineHelpText>
    <label>Total Autosafe Cash Volume</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>