force-app/main/default/objects/Concession__c/fields/Total_Branch_Cash_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Total_Branch_Cash_Turnover__c</fullName>
    <description>The total cash values deposited at branches</description>
    <inlineHelpText>The total cash values deposited at branches</inlineHelpText>
    <label>Total Branch Cash Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>