force-app/main/default/objects/Concession__c/fields/Total_Branch_Cash_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Branch_Cash_Volume__c</fullName>
    <description>The number of cash deposits at branch channel</description>
    <inlineHelpText>The number of cash deposits at branch channel</inlineHelpText>
    <label>Total Branch Cash Volume</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>