force-app/main/default/objects/Concession__c/fields/Total_Cash_Centre_Cash_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Total_Cash_Centre_Cash_Turnover__c</fullName>
    <description>The number of cash deposits at Cash Centre branches</description>
    <inlineHelpText>The number of cash deposits at Cash Centre branches</inlineHelpText>
    <label>Total Cash Centre Cash Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>