force-app/main/default/objects/Concession__c/fields/Total_Cash_Centre_Cash_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Cash_Centre_Cash_Volume__c</fullName>
    <description>The number of cash deposits at Cash Centre channel</description>
    <inlineHelpText>The number of cash deposits at Cash Centre channel</inlineHelpText>
    <label>Total Cash Centre Cash Volume</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>