force-app/main/default/objects/Concession__c/fields/Total_Cash_Withdrawal_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Cash_Withdrawal_Value__c</fullName>
    <description>The total value of cash withdrawals</description>
    <inlineHelpText>The total value of cash withdrawals</inlineHelpText>
    <label>Total Cash Withdrawal Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>