force-app/main/default/objects/Concession__c/fields/Total_Cash_Withdrawal_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Cash_Withdrawal_Volume__c</fullName>
    <description>The total Number of cash withdrawals by the client</description>
    <inlineHelpText>The total Number of cash withdrawals by the client</inlineHelpText>
    <label>Total Cash Withdrawal Volume</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>