force-app/main/default/objects/Concession__c/fields/Total_Cheque_Deposit_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Cheque_Deposit_Value__c</fullName>
    <description>The total value of cheques deposited</description>
    <inlineHelpText>The total value of cheques deposited</inlineHelpText>
    <label>Total Cheque Deposit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>