force-app/main/default/objects/Concession__c/fields/Total_Cheque_Deposit_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Cheque_Deposit_Volume__c</fullName>
    <description>The total number of cheques deposited into client’s account</description>
    <inlineHelpText>The total number of cheques deposited into client’s account</inlineHelpText>
    <label>Total Cheque Deposit Volume</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>