force-app/main/default/objects/Concession__c/fields/Total_Cheque_Encashment_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Cheque_Encashment_Value__c</fullName>
    <description>The total number of cheques cashed by the client</description>
    <inlineHelpText>The total number of cheques cashed by the client</inlineHelpText>
    <label>Total Cheque Encashment Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>