force-app/main/default/objects/Concession__c/fields/Total_Cheque_Issuing_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Cheque_Issuing_Volume__c</fullName>
    <description>The total number of cheques issued by the client</description>
    <inlineHelpText>The total number of cheques issued by the client</inlineHelpText>
    <label>Total Cheque Issuing Volume</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>