force-app/main/default/objects/Concession__c/fields/Total_Collection__c.field-meta.xml
<CustomField>
    <fullName>Total_Collection__c</fullName>
    <description>The total number of collections</description>
    <inlineHelpText>The total number of collections</inlineHelpText>
    <label>Total Number of Collections</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>