force-app/main/default/objects/Concession__c/fields/Total_Collection_Weighted_Average_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Collection_Weighted_Average_Price__c</fullName>
    <description>The average price paid on collections</description>
    <inlineHelpText>The average price paid on collections</inlineHelpText>
    <label>Total Collection Weighted Average Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>