force-app/main/default/objects/Concession__c/fields/Total_Credit_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Turnover__c</fullName>
    <description>The total credit value</description>
    <inlineHelpText>The total credit value</inlineHelpText>
    <label>Total Credit Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>