force-app/main/default/objects/Concession__c/fields/Total_Debit_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Total_Debit_Turnover__c</fullName>
    <description>The total debit value</description>
    <inlineHelpText>The total debit value</inlineHelpText>
    <label>Total Debit Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>