force-app/main/default/objects/Concession__c/fields/Total_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Total_Exposure__c</fullName>
    <description>Total value of client&apos;s facilities or credit agreements that they have with the bank</description>
    <inlineHelpText>Total value of client&apos;s facilities or credit agreements that they have with the bank</inlineHelpText>
    <label>Total Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>