force-app/main/default/objects/Concession__c/fields/Total_FBC_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_FBC_Value__c</fullName>
    <description>The total value of Future Bills of Collection</description>
    <inlineHelpText>The total value of Future Bills of Collection</inlineHelpText>
    <label>Total FBC Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>