force-app/main/default/objects/Concession__c/fields/Total_FBC_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_FBC_Volume__c</fullName>
    <description>The total number of Future Bills of Collection</description>
    <inlineHelpText>The total number of Future Bills of Collection</inlineHelpText>
    <label>Total FBC Volume</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>