force-app/main/default/objects/Concession__c/fields/Total_LC_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_LC_Value__c</fullName>
    <description>The total value of Letters of Credit</description>
    <inlineHelpText>The total value of Letters of Credit</inlineHelpText>
    <label>Total LC Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>