force-app/main/default/objects/Concession__c/fields/Total_LC_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_LC_Volume__c</fullName>
    <description>The total number of Letters of Credit</description>
    <inlineHelpText>The total number of Letters of Credit</inlineHelpText>
    <label>Total LC Volume</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>