force-app/main/default/objects/Concession__c/fields/Total_Liability_Balances__c.field-meta.xml
<CustomField>
    <fullName>Total_Liability_Balances__c</fullName>
    <description>The total value of all credit balances</description>
    <inlineHelpText>The total value of all credit balances</inlineHelpText>
    <label>Total Liability Balances</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>