force-app/main/default/objects/Concession__c/fields/Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments__c</fullName>
    <description>The total number of payments</description>
    <inlineHelpText>The total number of payments</inlineHelpText>
    <label>Total Number of Payments</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>