force-app/main/default/objects/Concession__c/fields/Total_Payments_Weighted_Average_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_Weighted_Average_Price__c</fullName>
    <description>The average price paid on payment transactions</description>
    <inlineHelpText>The average price paid on payment transactions</inlineHelpText>
    <label>Total Payments Weighted Average Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>