force-app/main/default/objects/Concession__c/fields/Total_TT_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_TT_Value__c</fullName>
    <description>The total value of inward and outward telegraphic transfers</description>
    <inlineHelpText>The total value of inward and outward telegraphic transfers</inlineHelpText>
    <label>Total TT Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>