force-app/main/default/objects/Concession__c/fields/Total_TT_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_TT_Volume__c</fullName>
    <description>The total number of inward and outward telegraphic transfers</description>
    <inlineHelpText>The total number of inward and outward telegraphic transfers</inlineHelpText>
    <label>Total TT Volume</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>