force-app/main/default/objects/Concession__c/fields/Total_Value_Added_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Total_Value_Added_Transactions__c</fullName>
    <description>The total number of value added transactions</description>
    <inlineHelpText>The total number of value added transactions</inlineHelpText>
    <label>Total Number of Value Added Transactions</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>