force-app/main/default/objects/Concession__c/fields/Transaction_Group__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Group__c</fullName>
    <description>A grouping of related transactions</description>
    <inlineHelpText>A grouping of related transactions</inlineHelpText>
    <label>Transaction Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Value Added</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>