force-app/main/default/objects/Concession__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>The type of transaction the concession is</description>
    <inlineHelpText>The type of transaction the concession is</inlineHelpText>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic Cheque Clearance</fullName>
            </value>
            <value>
                <fullName>Cash Withdrawal</fullName>
            </value>
            <value>
                <fullName>Cheque Deposit</fullName>
            </value>
            <value>
                <fullName>Cheque Encashment</fullName>
            </value>
            <value>
                <fullName>Cheque Issue</fullName>
            </value>
            <value>
                <fullName>Commission - Credit</fullName>
            </value>
            <value>
                <fullName>Commission - Hybrid</fullName>
            </value>
            <value>
                <fullName>Commisstion - Debit</fullName>
            </value>
            <value>
                <fullName>Future Bills of Collection</fullName>
            </value>
            <value>
                <fullName>Guarantees by Bank (International)</fullName>
            </value>
            <value>
                <fullName>Inward Telegraphic Transfers</fullName>
            </value>
            <value>
                <fullName>Letters of Credit</fullName>
            </value>
            <value>
                <fullName>Minimum Monthly Service Fee</fullName>
            </value>
            <value>
                <fullName>Modular Fee: Account Management</fullName>
            </value>
            <value>
                <fullName>Modular Fee: Account Management and Fund Transfer</fullName>
            </value>
            <value>
                <fullName>Monthly Management Fee</fullName>
            </value>
            <value>
                <fullName>Outward Telegraphic Transfers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>