force-app/main/default/objects/Concession__c/fields/Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Value__c</fullName>
    <description>The amount of the transactions</description>
    <inlineHelpText>The amount of the transactions</inlineHelpText>
    <label>Transaction Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>