force-app/main/default/objects/Concession__c/fields/Transaction_Volume__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Volume__c</fullName>
    <description>The number of transactions made</description>
    <inlineHelpText>The number of transactions made</inlineHelpText>
    <label>Transaction Volume</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>