force-app/main/default/objects/Concession__c/fields/Turnover__c.field-meta.xml
<CustomField>
    <fullName>Turnover__c</fullName>
    <description>The total sales turnover</description>
    <inlineHelpText>The total sales turnover</inlineHelpText>
    <label>Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>