force-app/main/default/objects/Concession__c/fields/Unutilised_Facility_Fee__c.field-meta.xml
<CustomField>
    <fullName>Unutilised_Facility_Fee__c</fullName>
    <description>Overdraft Only: Rate charged on the daily unutilised portion of an overdraft facility, as a percentage</description>
    <inlineHelpText>Overdraft Only: Rate charged on the daily unutilised portion of an overdraft facility, as a percentage</inlineHelpText>
    <label>Unutilised Facility Fee (%)</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>