force-app/main/default/objects/Concession__c/fields/Utilisation__c.field-meta.xml
<CustomField>
    <fullName>Utilisation__c</fullName>
    <description>The average utilization of an overdraft facility</description>
    <inlineHelpText>The average utilization of an overdraft facility</inlineHelpText>
    <label>Utilisation</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>