force-app/main/default/objects/Concession__c/fields/Weighted_Average_ANA_ATM_Price__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Average_ANA_ATM_Price__c</fullName>
    <label>Weighted Average ANA/ATM Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>