force-app/main/default/objects/Concession__c/fields/Weighted_Average_Autosafe_Price__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Average_Autosafe_Price__c</fullName>
    <description>The average price paid into Autosafe channel</description>
    <inlineHelpText>The average price paid into Autosafe channel</inlineHelpText>
    <label>Weighted Average Autosafe Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>