force-app/main/default/objects/Concession__c/fields/Weighted_Average_Margin_Above_Prime__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Average_Margin_Above_Prime__c</fullName>
    <description>Average margin above prime for all facilities or credit agreements, as a percentage</description>
    <inlineHelpText>Average margin above prime for all facilities or credit agreements, as a percentage</inlineHelpText>
    <label>Weighted Average Margin Above Prime (%)</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>