force-app/main/default/objects/Concession__c/fields/Weighted_Average_Net_Margin__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Average_Net_Margin__c</fullName>
    <description>The average interest margin made on an investment, as a percentage</description>
    <inlineHelpText>The average interest margin made on an investment, as a percentage</inlineHelpText>
    <label>Weighted Average Net Margin (%)</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>