force-app/main/default/objects/Concession__c/fields/Weighted_Risk_Grade__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Risk_Grade__c</fullName>
    <description>Average risk score across all facilities or credit agreements</description>
    <inlineHelpText>Average risk score across all facilities or credit agreements</inlineHelpText>
    <label>Weighted Risk Grade</label>
    <length>10</length>
    <type>Text</type>
</CustomField>