force-app/main/default/objects/Concession__c/recordTypes/BOL.recordType-meta.xml
<RecordType>
    <fullName>BOL</fullName>
    <active>true</active>
    <description>Online channel for businesses enabling segregation of duties, payments and collections</description>
    <label>BOL</label>
</RecordType>