force-app/main/default/objects/Concession__c/recordTypes/Cash_Acquiring.recordType-meta.xml
<RecordType>
    <fullName>Cash_Acquiring</fullName>
    <active>true</active>
    <description>Relates to Cash deposits done at Branches, ANA/ATM, Cash Centre and AutoSafe channels</description>
    <label>Cash Acquiring</label>
</RecordType>