force-app/main/default/objects/Concession__c/recordTypes/Investments.recordType-meta.xml
<RecordType>
    <fullName>Investments</fullName>
    <active>true</active>
    <description>Banking Liability Products including Notice deposits, Fixed deposits and Call Deposits where clients earn interest for deposited funds</description>
    <label>Investments</label>
</RecordType>