force-app/main/default/objects/Concession__c/recordTypes/Lending.recordType-meta.xml
<RecordType>
    <fullName>Lending</fullName>
    <active>true</active>
    <description>Banking Products including Overdrafts, Term loans, Property Finance; where funding has been advanced to the client and we earn interest for the funds advanced</description>
    <label>Lending</label>
</RecordType>