force-app/main/default/objects/Concession__c/recordTypes/Merchant_Acquiring.recordType-meta.xml
<RecordType>
    <fullName>Merchant_Acquiring</fullName>
    <active>true</active>
    <description>Point of Sale solution for merchants enabling them to accept card payments</description>
    <label>Merchant Acquiring</label>
</RecordType>