force-app/main/default/objects/Concession__c/recordTypes/Trade.recordType-meta.xml
<RecordType>
    <fullName>Trade</fullName>
    <active>true</active>
    <description>Banking Services to enable the payment and receipt of funds across borders</description>
    <label>Trade</label>
</RecordType>