force-app/main/default/objects/Concession__c/recordTypes/Transactional.recordType-meta.xml
<RecordType>
    <fullName>Transactional</fullName>
    <active>true</active>
    <description>Payment and Collection Services relating to the Business Current Account</description>
    <label>Transactional</label>
</RecordType>